# pkcs11-bridge

./: .gitignore  Cargo.toml  README.md
harness/: Cargo.toml  run.sh  softhsm2-wasi.conf
harness/src/: main.rs
harness/wit/: world.wit
src/: lib.rs  spki.rs
wit/: world.wit
