[package]
name    = "pkcs11-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen    = { version = "0.44", default-features = false, features = ["macros"] }
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }
# SPKI assembled by hand in src/spki.rs -- ~80 lines of plain DER
# encoding; cheaper than pulling in der/spki + their derive macros
# which proved fiddly to use with wit-bindgen-rt's edition / lifetime
# constraints in Phase 4.

[profile.release]
codegen-units = 1
opt-level     = "s"
debug         = false
strip         = true
lto           = true
